# Student-course-selection-system

./: CMakeLists.txt  Database.cppm  Database.h  broker.cppm  broker.h  coursebroker.cppm  coursebroker.h  do.course.cppm  do.enroll.cppm  do.person.cppm  do.secretary.cppm  do.student.cppm  do.teacher.cppm  domain.cppm  enrollmentbroker.cppm  enrollmentbroker.h  main.cpp  secretarybroker.cppm  secretarybroker.h  secretaryui.cppm  secretaryui.h  ser.secretary.cppm  ser.secretary.h  ser.student.cppm  ser.student.h  ser.teacher.cppm  ser.teacher.h  service.cppm  studentbroker.cppm  studentbroker.h  studentui.cppm  studentui.h  system.cppm  teacherbroker.cppm  teacherbroker.h  teacherui.cppm  teacherui.h  ui.cppm  userui.cppm  userui.h
